# seo_analyzer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  INFERENCE_PROTOCOL.md  JUDGING_CRITERIA_MAPPING.md  OPENENV_GUIDE.md  README.md  REWARD_DESIGN.md  RISK_AND_LIMITATIONS.md  RL_BASICS.md  SETUP.md  SUBMISSION_READINESS.md  TASKS.md  VALIDATION_RUNBOOK.md  __init__.py  app.py  baseline.py  client.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  prevalidationScript.ps1  pyproject.toml  seo_engine.py  test_case.py
server/: Dockerfile  __init__.py  app.py  environment.py  requirements.txt  seo_analyzer_environment.py
